--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "travel-buddy",
-  "type": "module",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "chalk": "^5.0.1",
-    "dotenv": "^16.0.0",
+    "axios": "^0.26.1",
+    "body-parser": "^1.19.1",
+    "chalk": "^2.4.2",
+    "dotenv": "^2.0.0",
+    "express": "^4.17.3",
     "fs": "0.0.1-security",
     "pg": "^8.7.3",
     "react": "^17.0.2",
@@ -24,7 +26,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "db:reset": "node bin/resetdb.js"
+    "db:reset": "node bin/resetdb.js",
+    "api": "node api/server.js"
   },
   "eslintConfig": {
     "extends": [
