--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "babel-plugin-macros": "^3.1.0",
     "body-parser": "^1.19.1",
     "chalk": "^2.4.2",
     "dotenv": "^2.0.0",
     "express": "^4.17.3",
     "fs": "0.0.1-security",
     "pg": "^8.7.3",
-    "babel-plugin-macros": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
     "styled-components": "^5.3.3",
@@ -31,7 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "db:reset": "node bin/resetdb.js",
-    "api": "node api/server.js"
+    "api": "node api/server.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -72,6 +73,6 @@
   },
   "devDependencies": {
     "webpack": "^5.70.0"
-  }, 
+  },
   "proxy": "http://localhost:8001"
 }
