--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs": "0.0.1-security",
     "pg": "^8.7.3",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
@@ -74,5 +75,5 @@
   "devDependencies": {
     "webpack": "^5.70.0"
   },
-  "proxy": "http://localhost:8001"
+  "proxy": "http://localhost:8001/"
 }
