--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,6 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-    "babel-plugin-macros": "^3.1.0",
-    "body-parser": "^1.19.1",
-    "chalk": "^2.4.2",
-    "dotenv": "^2.0.0",
-    "express": "^4.17.3",
-    "fs": "0.0.1-security",
-    "i": "^0.3.7",
-    "pg": "^8.7.3",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
@@ -34,8 +26,6 @@
     "start": "PORT=8000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "db:reset": "node bin/resetdb.js",
-    "api": "node api/server.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -77,5 +67,5 @@
   "devDependencies": {
     "webpack": "^5.70.0"
   },
-  "proxy": "http://localhost:8001/"
+  "proxy": "http://localhost:8001"
 }
